timeline draft: cursor scroll zoom

--- a/fx/todo.txt
+++ b/fx/todo.txt
@@ -1,4 +1,7 @@
 check unused shaders & includes
+
+refactor api for working with external resources - use pouinters instead indicies
+
 mrt set
 
 compare sampler support
