--- a/fx/todo.txt
+++ b/fx/todo.txt
@@ -2,12 +2,13 @@ check unused shaders & includes
 
 refactor api for working with external resources - use pouinters instead indicies
 
-mrt set
+timeline drawer batching (text, bpm boxes)
 
+mrt set
 compare sampler support
 camera interface (from-to interpolation)
 
-select proper videocard (force nvidia) #define ?
+select proper videocard (force nvidia if #define)
 
 
 
