--- a/fx/todo.txt
+++ b/fx/todo.txt
@@ -13,9 +13,20 @@ select proper videocard (force nvidia if #define)
 
 
 
+//--
 
+float pitch = DirectX::XMScalarASin(-m_transform._32);
 
+DirectX::XMVECTOR from(DirectX::XMVectorSet(m_transform._12, m_transform._31, 0.0f, 0.0f));
+DirectX::XMVECTOR to(DirectX::XMVectorSet(m_transform._22, m_transform._33, 0.0f, 0.0f));
+DirectX::XMVECTOR res(DirectX::XMVectorATan2(from, to));
 
+float roll = DirectX::XMVectorGetX(res);
+float yaw = DirectX::XMVectorGetY(res);
+
+return DirectX::XMFLOAT3(yaw, pitch, roll);
+
+//--
 
 
 win errors handling
